--- a/src/components/Editor/styles/editor.css
+++ b/src/components/Editor/styles/editor.css
@@ -94,10 +94,9 @@
 /* Add to your existing CSS */
 .youtube-wrapper {
   position: relative;
-  padding-bottom: 56.25%;
-  /* 16:9 aspect ratio */
-  height: 0;
-  margin: 1em 0;
+  height: 340px; /* fixed height instead of padding-bottom */
+  margin: 1em auto; /* centered with auto margins */
+  max-width: 640px; /* maximum width */
 }
 
 .youtube-wrapper iframe {
@@ -107,4 +106,3 @@
   width: 100%;
   height: 100%;
 }
-
